<?xml version="1.0" encoding="utf-8"?>

<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

    <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:background="@color/colorPrimary"
                android:orientation="horizontal">

            <Button
                    android:id="@+id/cancel_button"
                    android:background="@color/colorPrimary"
                    android:textColor="@android:color/white"
                    android:text="Cancel"
                    android:textSize="18sp"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>

            <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@color/colorPrimaryDark"/>

            <Button
                    android:id="@+id/next_button"
                    android:background="@color/colorPrimary"
                    android:textColor="@android:color/white"
                    android:text="Next"
                    android:textSize="18sp"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>
        </LinearLayout>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="16dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="16dp"
                android:textStyle="bold"
                android:text="Please fill out your child's information."
                android:textSize="18sp"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:orientation="horizontal">

            <EditText
                    android:id="@+id/input_child_firstname"
                    android:layout_height="@dimen/standrad_row_height"
                    android:layout_width="0dp"
                    android:layout_marginRight="4dp"
                    android:layout_weight="1"
                    android:hint="@string/input_child_firstname"
                    android:inputType="text"/>

            <EditText
                    android:id="@+id/input_child_middlename"
                    android:layout_height="@dimen/standrad_row_height"
                    android:layout_width="0dp"
                    android:layout_marginLeft="4dp"
                    android:layout_weight="1"
                    android:hint="@string/input_child_middlename_optional"
                    android:inputType="text"/>

        </LinearLayout>

        <EditText
                android:id="@+id/input_child_lastname"
                android:layout_height="@dimen/standrad_row_height"
                android:layout_width="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                android:hint="@string/input_child_lastname"
                android:inputType="text"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

            <EditText
                    android:id="@+id/input_child_dob"
                    android:layout_height="@dimen/standrad_row_height"
                    android:layout_width="0dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="4dp"
                    android:editable="false"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:gravity="left|center"
                    android:hint="@string/hint_date_of_birth"/>

            <EditText
                    android:id="@+id/input_child_gender"
                    android:layout_height="@dimen/standrad_row_height"
                    android:layout_width="0dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="16dp"
                    android:layout_weight="1"
                    android:hint="@string/input_child_gender"
                    android:inputType="text"/>
        </LinearLayout>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="16dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="16dp"
                android:textStyle="bold"
                android:text="Please fill out your information."
                android:textSize="18sp"/>
        <EditText
                android:id="@+id/input_parent_phone"
                android:layout_height="@dimen/standrad_row_height"
                android:layout_width="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:clickable="true"
                android:gravity="left|center"
                android:hint="Your Primary Phone Number"/>
        <EditText
                android:id="@+id/input_parent_first_name"
                android:layout_height="@dimen/standrad_row_height"
                android:layout_width="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                android:gravity="left|center"
                android:hint="Your first name"/>
        <EditText
                android:id="@+id/input_parent_last_name"
                android:layout_height="@dimen/standrad_row_height"
                android:layout_width="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:gravity="left|center"
                android:hint="Your last name"/>

        <EditText
                android:id="@+id/input_parent_addresss"
                android:layout_height="@dimen/standrad_row_height"
                android:layout_width="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:gravity="left|center"
                android:hint="Address"/>


        <EditText
                android:id="@+id/input_id"
                android:layout_height="@dimen/standrad_row_height"
                android:layout_width="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:gravity="left|center"
                android:hint="Optional: Your ID number"/>

    </LinearLayout>
</ScrollView>